applied index styles to success page, fixed icon spacing issue

--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -315,7 +315,7 @@
   }
   
   &__code-icon {
-    margin-right: 8px;
+    margin-right: 12px;
   }
 }
 
@@ -396,6 +396,6 @@
   }
   
   &__code-icon {
-    margin-right: 8px;
+    margin-right: 12px;
   }
 }
